modificada a rota de listagem para conter opções de ordenação
